--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/runtime": "^7.15.3",
@@ -24,6 +25,7 @@
     "workbox-webpack-plugin": "^6.6.0"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.5",
     "code-mirror-themes": "^1.0.0",
     "idb": "^6.1.2",
     "workbox-core": "^7.0.0"
