--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "workbox-webpack-plugin": "^6.6.0"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.5",
+    "autoprefixer": "10.4.5",
     "code-mirror-themes": "^1.0.0",
     "idb": "^6.1.2",
     "workbox-core": "^7.0.0"
